fix stats tab of machine view on mobiles

--- a/source/css/pages/machine/stats.css.scss
+++ b/source/css/pages/machine/stats.css.scss
@@ -4,5 +4,6 @@
     border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    max-width: 100%;
   }
 }
